policies/hostipc.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-hostipc
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        !has(object.spec.hostIPC) || object.spec.hostIPC == false
      message: >
        Using hostIPC is disallowed. spec.hostIPC must be undefined or set to false.
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostipc-namespace-optout-warn
spec:
  policyName: check-hostipc
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["baseline", "restricted"]
        - key: validating-admission-policies.kolteq.com/hostipc
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostipc-namespace-optin-warn
spec:
  policyName: check-hostipc
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: hostipc.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostipc-namespace-optout-audit
spec:
  policyName: check-hostipc
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["baseline", "restricted"]
        - key: validating-admission-policies.kolteq.com/hostipc
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostipc-namespace-optin-audit
spec:
  policyName: check-hostipc
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: hostipc.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostipc-namespace-optout-deny
spec:
  policyName: check-hostipc
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["baseline", "restricted"]
        - key: validating-admission-policies.kolteq.com/hostipc
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostipc-namespace-optin-deny
spec:
  policyName: check-hostipc
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: hostipc.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
